# transformers_from_scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
pytorch/: decoder_layer.py  encoder_layer.py  feed_forward_network.py  multi_head_attention.py  positional_encoding.py  run_transformer.py  transformer.py
