[tool.poetry]
name = "transformers from scratch"
version = "0.1.0"
description = "Various implementations of Transformers."
authors = ["Lennert Jansen <lennertjansen95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
