[tool.poetry]
name = "transformers from scratch"
version = "0.1.0"
description = "Various implementations of Transformers."
authors = ["Lennert Jansen <lennertjansen95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
numpy = "^2.1.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
